@@ -1,5 +1,14 @@
 2004-08-18 hugo303
 
+	* src/check.c, src/check.h.in, src/check_impl.h, src/check_log.c,
+	src/check_log.h, src/check_print.c, src/check_print.h,
+	src/check_run.c, tests/Makefile.am, tests/check_check_log.c,
+	tests/ex_xml_output.c, tests/test_xml_output.sh:
+	Added support for XML output of the test results, courtesy of
+	Frederic Peters.
+
+2004-08-18 hugo303
+
 	* src/check_run.c, tests/check_check_fixture.c: Fixed setup bug
 	from forum, failure in setup did not abort test in nofork mode.
 	Added test cases for bug.
